--- a/package.json
+++ b/package.json
@@ -6,19 +6,8 @@
   "scripts": {
     "test": "editorconfig-checker --exclude node_modules"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.27.5",
-    "del": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^5.0.0",
-    "gulp-uglify-es": "^3.0.0",
-    "sass": "^1.37.5"
-  },
+  "devDependencies": {},
   "dependencies": {
     "editorconfig-checker": "^4.0.2"
   }
